more more more worldgen

--- a/src/main/resources/assets/ethermist/lang/en_us.json
+++ b/src/main/resources/assets/ethermist/lang/en_us.json
@@ -45,6 +45,7 @@
 
   "block.ethermist.timeworn_sand": "Timeworn Sand",
   "block.ethermist.timeworn_sandstone": "Timeworn Sandstone",
+  "block.ethermist.polished_timeworn_sandstone": "Polished Timeworn Sandstone",
 
   "block.ethermist.crumbling_etherstone": "Crumbling Etherstone",
 
