--- a/src/main/resources/assets/ethermist/lang/en_us.json
+++ b/src/main/resources/assets/ethermist/lang/en_us.json
@@ -54,5 +54,8 @@
 
   "block.ethermist.crumbling_etherstone": "Crumbling Etherstone",
 
+  "block.ethermist.glimmer_blossom": "Glimmer Blossom",
+  "block.ethermist.glimmer_blossom_flower_pot": "Glimmer Blossom Flower Pot",
+
   "creativetab.ethermist.em_creative_tab": "Ethermist"
 }
