added base wand item and projectile logic

--- a/src/main/resources/assets/ethermist/lang/en_us.json
+++ b/src/main/resources/assets/ethermist/lang/en_us.json
@@ -57,6 +57,16 @@
   "block.ethermist.slimy_door": "Slimy Door",
   "block.ethermist.slimy_trapdoor": "Slimy Trapdoor",
 
+  "block.ethermist.cubed_abyssal_mushroom": "Cubed Abyssal Mushroom",
+  "block.ethermist.cubed_abyssal_mushroom_stairs": "Cubed Abyssal Mushroom Stairs",
+  "block.ethermist.cubed_abyssal_mushroom_slab": "Cubed Abyssal Mushroom Slab",
+  "block.ethermist.cubed_abyssal_mushroom_pressure_plate": "Cubed Abyssal Mushroom Pressure Plate",
+  "block.ethermist.cubed_abyssal_mushroom_button": "Cubed Abyssal Mushroom Button",
+  "block.ethermist.cubed_abyssal_mushroom_fence": "Cubed Abyssal Mushroom Fence",
+  "block.ethermist.cubed_abyssal_mushroom_fence_gate": "Cubed Abyssal Mushroom Fence Gate",
+  "block.ethermist.cubed_abyssal_mushroom_door": "Cubed Abyssal Mushroom Door",
+  "block.ethermist.cubed_abyssal_mushroom_trapdoor": "Cubed Abyssal Mushroom Trapdoor",
+
   "block.ethermist.blue_abyssal_mushroom_top": "Blue Abyssal Mushroom Top",
   "block.ethermist.orange_abyssal_mushroom_top": "Orange Abyssal Mushroom Top",
   "block.ethermist.blue_abyssal_mushroom_stem": "Blue Abyssal Mushroom Stem",
