finishing up basic enchantments, cleaning up implementation

--- a/src/main/resources/assets/ethermist/lang/en_us.json
+++ b/src/main/resources/assets/ethermist/lang/en_us.json
@@ -112,20 +112,30 @@
 
   "_comment": "--------------- WAND DESCRIPTIONS ---------------",
   "attribute.ethermist.wand.cooldown": "Second Cooldown",
-  "attribute.ethermist.wand.damage": "Damage",
+  "attribute.ethermist.wand.base_damage": "Bolt Damage",
+  "attribute.ethermist.wand.projectile_speed": "Bolt Speed",
+  "attribute.ethermist.wand.knockback": "Bolt Knockback",
+  "attribute.ethermist.wand.lifespan": "Second Bolt Duration",
+  "attribute.ethermist.wand.wand_accuracy": "Accuracy",
 
   "item.ethermist.dull_wand.wand_desc": "No wand effects.",
   "item.ethermist.flame_wand.wand_desc": "Ignites entities hit for a long time.",
 
   "_comment": "--------------- ENCHANTMENTS ---------------",
   "enchantment.ethermist.quick_cast": "Quick Cast",
-  "enchantment.ethermist.quick_cast.desc": "Decreases cooldown of Wand items.",
-  "enchantment.ethermist.greater_distance": "Enduring Magic",
-  "enchantment.ethermist.greater_distance.desc": "Increases range of Wand items.",
+  "enchantment.ethermist.quick_cast.desc": "Decreases cooldown of wands.",
+  "enchantment.ethermist.enduring_magic": "Enduring Magic",
+  "enchantment.ethermist.enduring_magic.desc": "Increases lifespan of wand projectiles.",
   "enchantment.ethermist.arcane_velocity": "Arcane Velocity",
-  "enchantment.ethermist.arcane_velocity.desc": "Increases projectile speed of Wand items.",
+  "enchantment.ethermist.arcane_velocity.desc": "Increases projectile speed of wand projectiles.",
   "enchantment.ethermist.ancient_power": "Ancient Power",
-  "enchantment.ethermist.ancient_power.desc": "Increases damage of Wand items.",
+  "enchantment.ethermist.ancient_power.desc": "Increases damage of wand projectiles.",
+  "enchantment.ethermist.runic_force": "Runic Force",
+  "enchantment.ethermist.runic_force.desc": "Increases knockback of wand projectiles.",
+  "enchantment.ethermist.stable_orb": "Stable Orb",
+  "enchantment.ethermist.stable_orb.desc": "Increases accuracy of wands.",
+  "enchantment.ethermist.augment_split": "Augment: Split",
+  "enchantment.ethermist.augment_split.desc": "Wand shoots multiple projectiles at once.",
 
   "creativetab.ethermist.em_block_tab": "Ethermist Blocks",
   "creativetab.ethermist.em_item_tab": "Ethermist Items"
