--- a/src/main/resources/assets/ethermist/lang/en_us.json
+++ b/src/main/resources/assets/ethermist/lang/en_us.json
@@ -142,7 +142,7 @@
   "enchantment.ethermist.augment_split": "Augment: Split",
   "enchantment.ethermist.augment_split.desc": "Wand shoots multiple projectiles at once.",
   "enchantment.ethermist.augment_homing": "Augment: Seek",
-  "enchantment.ethermist.augment_homing.desc": "Wand projectiles now seek the closest target.",
+  "enchantment.ethermist.augment_homing.desc": "Shoots homing projectiles at multiple nearby enemies.",
   "enchantment.ethermist.focus_monsters": "Focus: Monsters",
   "enchantment.ethermist.focus_monsters.desc": "Wand projectiles can only damage monsters.",
   "enchantment.ethermist.focus_animals": "Focus: Animals",
@@ -152,9 +152,9 @@
   "enchantment.ethermist.augment_aoe": "Augment: AoE",
   "enchantment.ethermist.augment_aoe.desc": "Wand shoots projectiles in a circle around you.",
   "enchantment.ethermist.augment_spray": "Augment: Spray",
-  "enchantment.ethermist.augment_spray.desc": "Hold down [Right Click] to shoot a stream of lower damage projectiles.",
+  "enchantment.ethermist.augment_spray.desc": "Hold down [Right Click] to shoot a stream of weaker projectiles.",
   "enchantment.ethermist.augment_meteor": "Augment: Meteor",
-  "enchantment.ethermist.augment_meteor.desc": "Projectiles now launch from the sky towards a right clicked location. Deals double damage.",
+  "enchantment.ethermist.augment_meteor.desc": "Projectiles now launch from the sky towards a right clicked location. Deals much higher damage.",
 
   "creativetab.ethermist.em_block_tab": "Ethermist Blocks",
   "creativetab.ethermist.em_item_tab": "Ethermist Items"
