rewrote targetting code to include things not under LivingEntity umbrella

--- a/src/main/resources/assets/ethermist/lang/en_us.json
+++ b/src/main/resources/assets/ethermist/lang/en_us.json
@@ -155,12 +155,12 @@
   "enchantment.ethermist.augment_split.desc": "Wand shoots multiple projectiles at once.",
   "enchantment.ethermist.augment_homing": "Augment: Seek",
   "enchantment.ethermist.augment_homing.desc": "Shoots homing projectiles at multiple nearby enemies.",
-  "enchantment.ethermist.focus_monsters": "Focus: Monsters",
-  "enchantment.ethermist.focus_monsters.desc": "Wand projectiles can only damage monsters.",
-  "enchantment.ethermist.focus_animals": "Focus: Animals",
-  "enchantment.ethermist.focus_animals.desc": "Wand projectiles can only damage animals.",
-  "enchantment.ethermist.focus_players": "Focus: Players",
-  "enchantment.ethermist.focus_players.desc": "Wand projectiles can only damage players.",
+  "enchantment.ethermist.focus_monsters": "Focus: No Monsters",
+  "enchantment.ethermist.focus_monsters.desc": "Wand projectiles will not hit monsters.",
+  "enchantment.ethermist.focus_animals": "Focus: No Animals",
+  "enchantment.ethermist.focus_animals.desc": "Wand projectiles will not hit animals.",
+  "enchantment.ethermist.focus_players": "Focus: No Players",
+  "enchantment.ethermist.focus_players.desc": "Wand projectiles will not hit players.",
   "enchantment.ethermist.augment_aoe": "Augment: AoE",
   "enchantment.ethermist.augment_aoe.desc": "Wand shoots projectiles in a circle around you.",
   "enchantment.ethermist.augment_spray": "Augment: Spray",
