redid targetting again to allow stacking focuses

--- a/src/main/resources/assets/ethermist/lang/en_us.json
+++ b/src/main/resources/assets/ethermist/lang/en_us.json
@@ -118,8 +118,8 @@
   "item.ethermist.flame_orb": "Flame Orb",
   "item.ethermist.flame_orb.desc": "Filled with the flame of the Nether.",
 
-  "item.ethermist.focus_tome": "Focus Tome",
-  "item.ethermist.focus_tome.desc": "Enchant in an enchanting table to obtain wand Focuses.",
+  "item.ethermist.exclusion_tome": "Exclusion Tome",
+  "item.ethermist.exclusion_tome.desc": "Enchant in an enchanting table to obtain wand targeting filters.",
   "item.ethermist.wand_tome": "Wand Tome",
   "item.ethermist.wand_tome.desc": "Can be enchanted with Wand enchantments.",
 
@@ -155,12 +155,12 @@
   "enchantment.ethermist.augment_split.desc": "Wand shoots multiple projectiles at once.",
   "enchantment.ethermist.augment_homing": "Augment: Seek",
   "enchantment.ethermist.augment_homing.desc": "Shoots homing projectiles at multiple nearby enemies.",
-  "enchantment.ethermist.focus_monsters": "Focus: No Monsters",
-  "enchantment.ethermist.focus_monsters.desc": "Wand projectiles will not hit monsters.",
-  "enchantment.ethermist.focus_animals": "Focus: No Animals",
-  "enchantment.ethermist.focus_animals.desc": "Wand projectiles will not hit animals.",
-  "enchantment.ethermist.focus_players": "Focus: No Players",
-  "enchantment.ethermist.focus_players.desc": "Wand projectiles will not hit players.",
+  "enchantment.ethermist.exclude_monsters": "Exclude: Monsters",
+  "enchantment.ethermist.exclude_monsters.desc": "Wand projectiles will not hit monsters.",
+  "enchantment.ethermist.exclude_animals": "Exclude: Animals",
+  "enchantment.ethermist.exclude_animals.desc": "Wand projectiles will not hit animals.",
+  "enchantment.ethermist.exclude_players": "Exclude: Players",
+  "enchantment.ethermist.exclude_players.desc": "Wand projectiles will not hit players.",
   "enchantment.ethermist.augment_aoe": "Augment: AoE",
   "enchantment.ethermist.augment_aoe.desc": "Wand shoots projectiles in a circle around you.",
   "enchantment.ethermist.augment_spray": "Augment: Spray",
@@ -177,6 +177,10 @@
   "enchantment.ethermist.kinetic_rush.desc": "Converts damage to forward momentum.",
   "enchantment.ethermist.volatile_energy": "Volatile Energy",
   "enchantment.ethermist.volatile_energy.desc": "Lower damage projectiles now lash out at nearby mobs.",
+  "enchantment.ethermist.seismic_surge": "Seismic Surge",
+  "enchantment.ethermist.seismic_surge.desc": "Projectiles break blocks and stun mobs. Damage influences hardest block broken.",
+  "enchantment.ethermist.augment_abundance": "Augment: Abundance",
+  "enchantment.ethermist.augment_abundance.desc": "Blocks and mobs killed by projectiles drop extra loot and experience.",
 
   "creativetab.ethermist.em_block_tab": "Ethermist Blocks",
   "creativetab.ethermist.em_item_tab": "Ethermist Items"
