Portal texture changes, new portal particles

--- a/src/main/resources/assets/ethermist/lang/en_us.json
+++ b/src/main/resources/assets/ethermist/lang/en_us.json
@@ -174,7 +174,7 @@
   "enchantment.ethermist.thunderstrike": "Thunderstrike",
   "enchantment.ethermist.thunderstrike.desc": "Call lightning down upon your foes.",
   "enchantment.ethermist.kinetic_rush": "Kinetic Rush",
-  "enchantment.ethermist.kinetic_rush.desc": "Converts damage to forward momentum.",
+  "enchantment.ethermist.kinetic_rush.desc": "Converts wand damage to forward momentum.",
   "enchantment.ethermist.volatile_energy": "Volatile Energy",
   "enchantment.ethermist.volatile_energy.desc": "Lower damage projectiles now lash out at nearby mobs.",
   "enchantment.ethermist.seismic_surge": "Seismic Surge",
