added Frostpine wood

--- a/src/main/resources/assets/ethermist/lang/en_us.json
+++ b/src/main/resources/assets/ethermist/lang/en_us.json
@@ -57,6 +57,22 @@
   "block.ethermist.slimy_door": "Slimy Door",
   "block.ethermist.slimy_trapdoor": "Slimy Trapdoor",
 
+  "block.ethermist.frostpine_log": "Frostpine Log",
+  "block.ethermist.stripped_frostpine_log": "Stripped Frostpine Log",
+  "block.ethermist.frostpine_wood": "Frostpine Wood",
+  "block.ethermist.stripped_frostpine_wood": "Stripped Frostpine Wood",
+  "block.ethermist.frostpine_leaves": "Frostpine Leaves",
+  "block.ethermist.frostpine_sapling": "Frostpine Sapling",
+  "block.ethermist.frostpine_planks": "Frostpine Planks",
+  "block.ethermist.frostpine_stairs": "Frostpine Stairs",
+  "block.ethermist.frostpine_slab": "Frostpine Slab",
+  "block.ethermist.frostpine_pressure_plate": "Frostpine Pressure Plate",
+  "block.ethermist.frostpine_button": "Frostpine Button",
+  "block.ethermist.frostpine_fence": "Frostpine Fence",
+  "block.ethermist.frostpine_fence_gate": "Frostpine Fence Gate",
+  "block.ethermist.frostpine_door": "Frostpine Door",
+  "block.ethermist.frostpine_trapdoor": "Frostpine Trapdoor",
+
   "block.ethermist.cubed_abyssal_mushroom": "Cubed Abyssal Mushroom",
   "block.ethermist.cubed_abyssal_mushroom_stairs": "Cubed Abyssal Mushroom Stairs",
   "block.ethermist.cubed_abyssal_mushroom_slab": "Cubed Abyssal Mushroom Slab",
