Renamed all the current ancient woods to Glimmering Ancient woods

--- a/src/main/resources/assets/ethermist/lang/en_us.json
+++ b/src/main/resources/assets/ethermist/lang/en_us.json
@@ -19,27 +19,27 @@
   "block.ethermist.etherstone_brick_slab": "Etherstone Slab",
   "block.ethermist.etherstone_brick_wall": "Etherstone Wall",
 
-  "block.ethermist.ancient_log": "Ancient Log",
-  "block.ethermist.stripped_ancient_log": "Stripped Ancient Log",
-  "block.ethermist.ancient_wood": "Ancient Wood",
-  "block.ethermist.stripped_ancient_wood": "Stripped Ancient Wood",
+  "block.ethermist.glimmering_ancient_log": "Glimmering Ancient Log",
+  "block.ethermist.stripped_glimmering_ancient_log": "Stripped Glimmering Ancient Log",
+  "block.ethermist.glimmering_ancient_wood": "Glimmering Ancient Wood",
+  "block.ethermist.stripped_glimmering_ancient_wood": "Stripped Glimmering Ancient Wood",
 
-  "block.ethermist.suspicious_ancient_log": "Suspicious Ancient Log",
-  "block.ethermist.stripped_suspicious_ancient_log": "Stripped Suspicious Ancient Log",
-  "block.ethermist.suspicious_ancient_wood": "Suspicious Ancient Wood",
-  "block.ethermist.stripped_suspicious_ancient_wood": "Stripped Suspicious Ancient Wood",
+  "block.ethermist.suspicious_glimmering_ancient_log": "Suspicious Glimmering Ancient Log",
+  "block.ethermist.stripped_suspicious_glimmering_ancient_log": "Stripped Suspicious Glimmering Ancient Log",
+  "block.ethermist.suspicious_glimmering_ancient_wood": "Suspicious Glimmering Ancient Wood",
+  "block.ethermist.stripped_suspicious_glimmering_ancient_wood": "Stripped Suspicious Glimmering Ancient Wood",
 
   "block.ethermist.ancient_leaves": "Ancient Leaves",
-  "block.ethermist.ancient_sapling": "Ancient Sapling",
-  "block.ethermist.ancient_planks": "Ancient Planks",
-  "block.ethermist.ancient_stairs": "Ancient Stairs",
-  "block.ethermist.ancient_slab": "Ancient Slab",
-  "block.ethermist.ancient_pressure_plate": "Ancient Pressure Plate",
-  "block.ethermist.ancient_button": "Ancient Button",
-  "block.ethermist.ancient_fence": "Ancient Fence",
-  "block.ethermist.ancient_fence_gate": "Ancient Fence Gate",
-  "block.ethermist.ancient_door": "Ancient Door",
-  "block.ethermist.ancient_trapdoor": "Ancient Trapdoor",
+  "block.ethermist.glimmering_ancient_sapling": "Glimmering Ancient Sapling",
+  "block.ethermist.glimmering_ancient_planks": "Glimmering Ancient Planks",
+  "block.ethermist.glimmering_ancient_stairs": "Glimmering Ancient Stairs",
+  "block.ethermist.glimmering_ancient_slab": "Glimmering Ancient Slab",
+  "block.ethermist.glimmering_ancient_pressure_plate": "Glimmering Ancient Pressure Plate",
+  "block.ethermist.glimmering_ancient_button": "Glimmering Ancient Button",
+  "block.ethermist.glimmering_ancient_fence": "Glimmering Ancient Fence",
+  "block.ethermist.glimmering_ancient_fence_gate": "Glimmering Ancient Fence Gate",
+  "block.ethermist.glimmering_ancient_door": "Glimmering Ancient Door",
+  "block.ethermist.glimmering_ancient_trapdoor": "Glimmering Ancient Trapdoor",
 
   "block.ethermist.slimy_log": "Slimy Log",
   "block.ethermist.stripped_slimy_log": "Stripped Slimy Log",
