new biomes, new flower

--- a/src/main/resources/assets/ethermist/lang/en_us.json
+++ b/src/main/resources/assets/ethermist/lang/en_us.json
@@ -135,6 +135,10 @@
 
   "block.ethermist.glimmer_blossom": "Glimmer Blossom",
   "block.ethermist.glimmer_blossom_flower_pot": "Glimmer Blossom Flower Pot",
+
+  "block.ethermist.night_lavender": "Night Lavender",
+  "block.ethermist.night_lavender_flower_pot": "Night Lavender Flower Pot",
+
   "block.ethermist.rich_grass": "Rich Grass",
 
   "_comment": "--------------- ITEMS ---------------",
