--- a/src/main/resources/assets/ethermist/lang/en_us.json
+++ b/src/main/resources/assets/ethermist/lang/en_us.json
@@ -146,8 +146,10 @@
   "block.ethermist.glimmer_blossom": "Glimmer Blossom",
   "block.ethermist.glimmer_blossom_flower_pot": "Glimmer Blossom Flower Pot",
 
-  "block.ethermist.night_lavender": "Night Lavender",
-  "block.ethermist.night_lavender_flower_pot": "Night Lavender Flower Pot",
+  "block.ethermist.nightbell": "Nightbell",
+  "block.ethermist.nightbell_flower_pot": "Nightbell Flower Pot",
+
+  "block.ethermist.slimy_allium": "Slimy Allium",
 
   "block.ethermist.rich_grass": "Rich Grass",
 
